<resources>
    <string name="app_name">Koku</string>

    <string name="action_send_weibo">发微博</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_about">关于</string>
    <string name="action_exit">退出</string>
    <string name="action_remind">提醒</string>
    <string name="action_repost">转发</string>
    <string name="action_save">保存</string>
    <string name="action_share">分享</string>
    <string name="action_favorite">收藏</string>
    <string name="action_cancel_favorite">取消收藏</string>
    <string name="action_copy">复制</string>
    <string name="action_refresh">刷新</string>
    <string name="action_open_in_browser">在浏览器中打开</string>

    <string name="action_comment">评论</string>
    <string name="drawer_open">打开抽屉</string>
    <string name="drawer_close">关闭抽屉</string>
    <string name="app_authorize">账号授权</string>
    <string name="load_more">加载中</string>
    <string name="load_fail">加载失败，点击重试</string>
    <string name="no_more_weibo">没有更多微博了</string>
    <string name="load_finish">加载完成</string>
    <string name="colon">:</string>
    <string name="serach_user_warning">温馨提示：新浪接口功能搜索的范围是：V用户、粉丝500以上的达人、粉丝600以上的普通用户</string>
    <string name="serach_user">搜索用户</string>
    <string name="at_friends">\@好友</string>
    <string name="nearly_dynamic">周边动态</string>
    <string name="public_weibo">公共微博</string>
    <string name="my_favorite">我的收藏</string>
    <string name="draft">草稿箱</string>
    <string name="share_new">分享新鲜事</string>
    <string name="publish_weibo">发微博</string>
    <string name="comment_weibo">评论微博</string>
    <string name="repost_weibo">转发微博</string>
    <string name="reply_comment">回复评论</string>
    <string name="reply">回复</string>
    <array name="photo_items">
        <item>拍照</item>
        <item>最后一次拍照</item>
        <item>从相册中选择</item>
    </array>
    <string name="location_not_available">定位不可用</string>
    <string name="unknown_address">未知地址</string>
    <string name="no_location_permission">没有定位权限</string>
    <string name="no_more_pictures">一次最多只能上传9张图片</string>
    <string name="content_cannot_be_empty">微博内容不能为空！</string>
    <string name="all_weibo">全部微博</string>
    <string name="bilateral_weibo">互相关注</string>
    <string name="again_to_exit">再按一次退出应用</string>
    <string name="comment_to_author">是否同时评论给作者</string>
    <string name="publish_success">发布成功</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="comment_to_original_weibo">是否同时评论给原微博</string>
    <string name="follower">粉丝：</string>
    <string name="follow">关注：</string>
    <string name="weibo">微博：</string>
    <string name="follower_num_limit">温馨提示：由于新浪微博接口限制，只返回同样授权本应用的用户</string>
    <string name="friends_list">好友列表</string>
    <string name="search_result_list">搜索结果</string>
    <string name="load_web">加载网页</string>
    <string name="copy_to_clipboard">已将网址复制到剪贴板上</string>
    <string name="copy_weibo_to_clipboard">已将微博复制到剪贴板上</string>
    <string name="copy_comment_to_clipboard">已将评论复制到剪贴板上</string>
    <string name="please_wait">请等待...</string>
    <string name="operation_success">操作成功</string>
    <string name="most_nine_pic">最多只能选择9张图片</string>
    <string name="no_pic">未选择图片</string>
    <string name="tip">提示</string>
    <string name="save_draft">是否保存到草稿箱中？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_draft">确定删除选中的草稿吗？</string>
    <string name="rb_repost">转发</string>
    <string name="rb_comment">评论</string>
    <string name="follow_he">关注他</string>
    <string name="follow_she">关注她</string>
    <string name="cancel_follow">取消关注</string>
    <string name="all">全部</string>
    <string name="original">原创</string>
    <string name="picture">图片</string>
    <string name="comment">评论</string>
    <string name="refer_to">提及</string>
    <string name="private_letter">私信</string>
    <string name="share">分享到</string>
    <string name="share_title">%1$s的微博</string>
    <string name="unread_weibo">%1$d条新微博，点击刷新</string>
    <string name="share_app">Koku是一款全新的微博第三方客户端，流畅的效果和简洁大方的界面，带给你不同的视角效果和体验。快来试试吧：http://t.cn/RUJWpUR</string>
    <string name="no_draft">没有草稿</string>
    <string name="font_size">字体大小</string>
    <string name="send_remind">发送提醒</string>
    <string name="send_success">发送成功</string>
    <string name="cancel_auth_fail">取消授权失败</string>
    <string name="confirm_cacel_auth">确定要取消授权吗？</string>
    <string name="feedback_text">#Koku意见反馈# @活得好像一条狗</string>
    <string name="fab_function">Fab按钮功能</string>
    <string name="fab_position">Fab按钮位置</string>
    <string name="pic_num">%1$d/%2$d</string>
    <string name="clear_cache">缓存大小%1$sMB</string>
    <string name="confirm_clear_cache">是否清除图片缓存？</string>
    <string name="notify">通知</string>
    <string name="save_success">保存成功！图片路径:%1$s</string>
    <string name="save_fail">保存失败</string>
    <string name="no_sd_card">没有SD卡或SD卡已卸载</string>
    <string name="fail_to_locate">获取位置信息失败</string>
    <string name="clear_success">清理成功！</string>
    <array name="fab_function">
        <item>发微博</item>
        <item>刷新</item>
    </array>
    <array name="fab_position">
        <item>左侧</item>
        <item>右侧</item>
    </array>
    <array name="font_size">
        <item>小号字体</item>
        <item>标准字体</item>
        <item>大号字体</item>
    </array>
</resources>
