<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_remind"
        android:icon="@drawable/ic_action_notify"
        android:title="@string/action_remind"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_send_weibo"
        android:orderInCategory="100"
        android:title="@string/action_send_weibo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
