<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WeiboDetailsActivity">

    <item
        android:id="@+id/action_repost"
        android:icon="@drawable/ic_repost_light"
        android:title="@string/action_repost"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_comment"
        android:icon="@drawable/ic_comment_stable_light"
        android:title="@string/action_comment"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_light"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_light"
        android:title="@string/action_favorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy_light"
        android:title="@string/action_copy"
        app:showAsAction="never" />
</menu>
